--- a/views/partials/pagination.twig
+++ b/views/partials/pagination.twig
@@ -3,7 +3,7 @@
     {% if pagination.prev %}
         <a href="{{pagination.prev.link}}#page-top" class="previous-pager prev {{pagination.prev.link|length ? '' : 'invisible'}}">Prev</a>
     {% else %}
-        <a style="visibility:hidden;" href="{{pagination.prev.link}}#page-top" class="previous-pager prev {{pagination.prev.link|length ? '' : 'invisible'}}">Prev</a>
+        <a disabled href="{{pagination.prev.link}}#page-top" class="previous-pager prev {{pagination.prev.link|length ? '' : 'invisible'}}">Prev</a>
     {% endif %}
     <ul class="pagination-list">
         {% for page in pagination.pages %}
@@ -19,7 +19,7 @@
     {% if pagination.next %}
         <a href="{{pagination.next.link}}#page-top" class="next next-pager {{pagination.next.link|length ? '' : 'invisible'}}">Next</a>
     {% else %}
-        <a style="visibility:hidden;" href="{{pagination.next.link}}#page-top" class="next next-pager {{pagination.next.link|length ? '' : 'invisible'}}">Next</a>
+        <a disabled href="{{pagination.next.link}}#page-top" class="next next-pager {{pagination.next.link|length ? '' : 'invisible'}}">Next</a>
     {% endif %}
     </div>
 </nav>
