--- a/views/teases/tease-skill.twig
+++ b/views/teases/tease-skill.twig
@@ -1,7 +1,7 @@
 {% extends "teases/tease.twig" %}
 
 {% block content %}
-    <article class="post">
+    <article class="post" id="{{post.slug}}">
         <header class="post-header">
             <h3 class="post-box-title"><a href="{{post.link}}">{{post.title}}</a></h3
         </header>
