--- a/views/archive-skill.twig
+++ b/views/archive-skill.twig
@@ -1,17 +1,21 @@
 {% extends "page.twig" %}
 
 {% block content %}
-<article>
-    <h1 class="page-title">{{posts[0].type.label}}</h1>
+<article class="elr-container-full">
+    <h1 class="page-title">Skills</h1>
     {# skills links should take users to related skill section further down the page #}
-    <div class="skills-holder">
+    <div class="skills-holder" style="padding-bottom: 40px">
         {% for skill in skills %}
-            <a class="skill-link" href="#{{skill.slug}}">{{skill.title}}</a>
+            <div class="skill-link smooth-scroll" >
+                <a href="#{{skill.slug}}">{{skill.title}}</a>
+            </div>
         {% endfor %}
     </div>
-    <div>
+    <div class="skills-content-holder">
         {% for skill in skills %}
-            {% include 'teases/tease-skill.twig' with {'post': skill} %}
+            <div class="skill">
+                {% include 'teases/tease-skill.twig' with {'post': skill} %}
+            </div>
         {% endfor %}
     </div>
 </article>
