--- a/views/front-page.twig
+++ b/views/front-page.twig
@@ -60,7 +60,9 @@
             <h3 class="background-section-title" id="skills">Skills</h3>
             <div class="skills-holder">
                 {% for skill in skills %}
-                    <a class="skill-link" href="skills/#{{skill.slug}}">{{skill.title}}</a>
+                    <div class="skill-link">
+                        <a href="skills/#{{skill.slug}}">{{skill.title}}</a>
+                    </div>
                 {% endfor %}
             </div>
         </div>
