add skills boxes to skill archive template

--- a/views/teases/tease-skill.twig
+++ b/views/teases/tease-skill.twig
@@ -5,15 +5,17 @@
     <div class="page-block-header">
         <h2 id="posts" class="box-heading">{{post.title}} {% if post.get_field('_skill_length') %} - {{post.get_field('_skill_length') | human_diff}} of experience{% endif %}</h2>
     </div>
-    {% if post.thumbnail.src %}
-    <figure class="post-image-holder">
-        <a href="{{post.link}}">
-            <img src="{{post.thumbnail.src}}" />
-        </a>
-    </figure>
-    {% endif %}
-    <div class="page-block-content post-holder">
-        <p class="post-excerpt">{{post.get_preview(25)}}</p>
+    <div class="post-box post">
+        {% if post.thumbnail.src %}
+        <figure class="post-image-holder">
+            <a href="{{post.link}}">
+                <img src="{{post.thumbnail.src}}" />
+            </a>
+        </figure>
+        {% endif %}
+        <div class="page-block-content post-holder">
+            <p class="post-excerpt">{{post.get_preview(25)}}</p>
+        </div>
     </div>
 </article>
 {% endblock %}
