update archive urls

--- a/views/front-page.twig
+++ b/views/front-page.twig
@@ -12,7 +12,7 @@
             {% endfor %}
         </div>
         <div class="page-block-footer">
-            <a href="/blog" class="elr-button elr-button-primary">Read More Articles</a>
+            <a href="{{blog_url}}" class="elr-button elr-button-primary">Read More Articles</a>
         </div>
     </div>
     {% endif %}
@@ -27,7 +27,7 @@
             {% endfor %}
         </div>
         <div class="page-block-footer">
-            <a href="/projects" class="elr-button elr-button-primary">View More</a>
+            <a href="{{portfolio_url}}" class="elr-button elr-button-primary">View More</a>
         </div>
     </div>
     {% endif %}
@@ -90,7 +90,7 @@
             {% endfor %}
         </div>
         <div class="page-block-footer">
-            <a href="/tutorials" class="elr-button elr-button-primary">View More Tutorials</a>
+            <a href="{{tutorials_url}}" class="elr-button elr-button-primary">View More Tutorials</a>
         </div>
     </div>
     {% endif %}
