--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -1,131 +1,131 @@
 .main-header {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: stretch;
-    background-color: $white;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: stretch;
+  background-color: $white;
 }
 
 .site-name {
-    font-family: raleway;
-    font-weight: 700;
-    font-size: to-rems(20px);
-    flex-grow: 1;
-    border: $border;
-    border-left: 0;
-    border-top: 0;
-    padding: 15px 20px;
+  font-family: raleway;
+  font-weight: 700;
+  font-size: to-rems(20px);
+  flex-grow: 1;
+  border: $border;
+  border-left: 0;
+  border-top: 0;
+  padding: 15px 20px;
 
-    @include elr-breakpoint($config: (point: 960px)) {
-        padding-left: 10px;
-        order: 1;
-    }
+  @include elr-breakpoint($config: (point: 960px)) {
+    padding-left: 10px;
+    order: 1;
+  }
 }
 
 .main-nav {
-    flex-grow: 2;
-    padding: 0;
-    margin: 0;
-    border-bottom: $border;
+  flex-grow: 2;
+  padding: 0;
+  margin: 0;
+  border-bottom: $border;
 
-    @include elr-breakpoint($config: (point: 960px)) {
-        width: 100%;
-        order: 3;
-    }
+  @include elr-breakpoint($config: (point: 960px)) {
+    width: 100%;
+    order: 3;
+  }
 }
 
 .main-menu {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+
+  li {
     height: 100%;
-    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    text-align: center;
 
-    li {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        text-align: center;
+    &.current-menu-item a {
+      border-bottom-color: $link-color;
+    }
+  }
 
-        &.current-menu-item a {
-            border-bottom-color: $link-color;
-        }
+  a {
+    display: inline-block;
+    height: 100%;
+    padding: 15px 20px 12px;
+    text-decoration: none;
+    color: $link-color;
+    transition: color 0.3s, border-color 0.3s;
+    border-bottom: 3px solid transparent;
+
+    @include elr-breakpoint($config: (point: 'jupiter')) {
+      padding-left: 10px;
+      padding-right: 10px;
     }
 
-    a {
-        display: inline-block;
-        height: 100%;
-        padding: 15px 20px 12px;
-        text-decoration: none;
-        color: $link-color;
-        transition: color .3s, border-color .3s;
-        border-bottom: 3px solid transparent;
-
-        @include elr-breakpoint($config: (point: 'jupiter')) {
-            padding-left: 10px;
-            padding-right: 10px;
-        }
-
-        &:hover {
-            text-decoration: none;
-            color: $accent-color;
-            border-bottom-color: $accent-color;
-        }
+    &:hover {
+      text-decoration: none;
+      color: $accent-color;
+      border-bottom-color: $accent-color;
     }
+  }
 }
 
 .main-nav,
 .front-nav {
-    @include elr-breakpoint($config: (point: 960px)) {
-        .main-menu {
-            justify-content: center;
-        }
-
-        li,
-        a {
-            max-height: 50px;
-        }
+  @include elr-breakpoint($config: (point: 960px)) {
+    .main-menu {
+      justify-content: center;
     }
+
+    li,
+    a {
+      max-height: 50px;
+    }
+  }
 }
 
 .front-nav {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    box-shadow: 1px 1px 5px rgba($black, .1);
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  box-shadow: 1px 1px 5px rgba($black, 0.1);
 
-    @include elr-breakpoint($config: (point: 960px)) {
-        order: 4;
-    }
+  @include elr-breakpoint($config: (point: 960px)) {
+    order: 4;
+  }
 }
 
 .social-nav {
-    flex-grow: 1px;
-    padding: 0;
-    margin: 0;
-    border-left: $border;
-    border-bottom: $border;
+  flex-grow: 1px;
+  padding: 0;
+  margin: 0;
+  border-left: $border;
+  border-bottom: $border;
 
-    @include elr-breakpoint($config: (point: 960px)) {
-        order: 2;
-        border-left: 0;
+  @include elr-breakpoint($config: (point: 960px)) {
+    order: 2;
+    border-left: 0;
+  }
+
+  .main-menu {
+    justify-content: flex-end;
+  }
+
+  li {
+    flex-grow: 1;
+
+    a {
+      padding-left: 20px;
+      padding-right: 20px;
     }
-
-    .main-menu {
-        justify-content: flex-end;
-    }
-
-    li {
-        flex-grow: 1;
-
-        a {
-            padding-left: 20px;
-            padding-right: 20px;
-        }
-    }
+  }
 }
