--- a/assets/scss/partials/_main-content.scss
+++ b/assets/scss/partials/_main-content.scss
@@ -175,7 +175,7 @@ img {
   color: $accent-color;
   font-weight: 700;
   padding-bottom: 5px;
-  border-bottom: 1px solid $light-grey;
+  border-bottom: 1px solid $lightest-grey;
   margin-bottom: 30px;
 }
 
@@ -228,6 +228,17 @@ img {
   }
 }
 
+.experience {
+  padding-bottom: 20px;
+
+  .post-box-title {
+    color: $elr-blue;
+    padding-bottom: 5px;
+    border-bottom: 1px solid $lightest-grey;
+    margin-bottom: 30px;
+  }
+}
+
 .skills-content-holder {
   display: flex;
   flex-wrap: wrap;
@@ -259,7 +270,7 @@ img {
 .author-box {
   @include elr-clearfix;
   background-color: $lightest-grey;
-  border: 1px solid $light-grey;
+  border: 1px solid $lightest-grey;
   padding: 10px 15px;
   max-width: 600px;
 }
@@ -267,7 +278,7 @@ img {
 .author-title {
   color: $accent-color;
   font-size: 24px;
-  border-bottom: 1px solid $light-grey;
+  border-bottom: 1px solid $lightest-grey;
   padding-bottom: 10px;
   margin-bottom: 20px;
 }
@@ -293,4 +304,12 @@ img {
 .previous-pager:hover[disabled] {
   background-color: #ccc;
   cursor: default;
+}
+
+.type-heading {
+  width: 100%;
+  border-bottom: 1px solid $lightest-grey;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
