--- a/assets/scss/partials/_post-box.scss
+++ b/assets/scss/partials/_post-box.scss
@@ -1,139 +1,135 @@
 .post-loop {
-    display: flex;
-    margin-left: -10px;
-    margin-right: -10px;
-    flex-wrap: wrap;
+  display: flex;
+  margin-left: -10px;
+  margin-right: -10px;
+  flex-wrap: wrap;
 
-    .post-box {
-        min-width: 350px;
-        max-width: 400px;
-        margin: 10px;
+  .post-box {
+    min-width: 350px;
+    max-width: 400px;
+    margin: 10px;
 
-        @include elr-breakpoint($config: (point: 768px)) {
-            min-width: 0;
-            max-width: none;
-        }
+    @include elr-breakpoint($config: (point: 768px)) {
+      min-width: 0;
+      max-width: none;
     }
+  }
 }
 
 .post-box-image {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .page-block-content .post-box {
-    width: (100% / 3);
+  width: (100% / 3);
 
-    @include elr-breakpoint($config: (point: 960px)) {
-        max-width: 50%;
-        width: 50%;
+  @include elr-breakpoint($config: (point: 960px)) {
+    max-width: 50%;
+    width: 50%;
+  }
+
+  @include elr-breakpoint($config: (point: 768px)) {
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .post-box-image {
+    height: 150px;
+    max-width: 100%;
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 10px;
+
+    @include elr-breakpoint($config: (point: 768px)) {
+      height: auto;
+      position: static;
+    }
+  }
+
+  img {
+    display: block;
+
+    @include elr-breakpoint($config: (point: 769px, modifier: 'min-width')) {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      height: 150px;
+      width: auto;
+      max-width: none;
+      transform: translate(-50%, -50%);
     }
 
     @include elr-breakpoint($config: (point: 768px)) {
-        max-width: 100%;
-        width: 100%;
+      height: auto;
+      max-width: 100%;
+      width: auto;
     }
-
-    .post-box-image {
-        height: 150px;
-        max-width: 100%;
-        overflow: hidden;
-        position: relative;
-        margin-bottom: 10px;
-
-        @include elr-breakpoint($config: (point: 768px)) {
-            height: auto;
-            position: static;
-        }
-    }
-
-    img {
-        display: block;
-
-        @include elr-breakpoint($config: (
-            point: 769px,
-            modifier: 'min-width'
-        )) {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            height: 150px;
-            width: auto;
-            max-width: none;
-            transform: translate(-50%, -50%);
-        }
-
-        @include elr-breakpoint($config: (point: 768px)) {
-            height: auto;
-            max-width: 100%;
-            width: auto;
-        }
-    }
+  }
 }
 
 .post-box {
-    padding: 10px;
+  padding: 10px;
 }
 
 .post-box-title {
-    font-size: to-rems(18px);
+  font-size: to-rems(18px);
 }
 
 .post-box-meta {
-    padding: 0;
-    margin: 0;
-    // width: 100%;
-    display: flex;
-    flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  // width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 
-    li {
-        list-style: none;
-        font-size: to-rems(12px);
-        padding: 0 10px 0 0;
-    }
+  li {
+    list-style: none;
+    font-size: to-rems(12px);
+    padding: 0 10px 0 0;
+  }
 
-    a {
-        color: $dark-grey;
-    }
+  a {
+    color: $dark-grey;
+  }
 
-    .full-width {
-        width: 100%;
-    }
+  .full-width {
+    width: 100%;
+  }
 
-    .fa {
-        font-size: 12px;
-        color: $elr-blue;
-    }
+  .fa {
+    font-size: 12px;
+    color: $elr-blue;
+  }
 
-    .post-box-category {
-        width: 100%;
-        padding-right: 0;
-    }
+  .post-box-category {
+    width: 100%;
+    padding-right: 0;
+  }
 }
 
 .post-excerpt {
-    font-family: 'roboto';
-    font-size: to-rems(14px);
-    color: $darker-grey;
-    font-weight: 300;
-    padding: 10px 0;
+  font-family: 'roboto';
+  font-size: to-rems(14px);
+  color: $darker-grey;
+  font-weight: 300;
+  padding: 10px 0;
 }
 
 .post-full {
-    .post-box-title {
-        font-size: to-rems(22px);
-    }
+  .post-box-title {
+    font-size: to-rems(22px);
+  }
 
-    .post-box-meta {
-        list-style: none;
-        padding: 0;
-        margin: 0 0 10px;
+  .post-box-meta {
+    list-style: none;
+    padding: 0;
+    margin: 0 0 10px;
 
-        .fa {
-            display: inline-block;
-            width: 20px;
-            text-align: center;
-            color: $link-color;
-        }
+    .fa {
+      display: inline-block;
+      width: 20px;
+      text-align: center;
+      color: $link-color;
     }
+  }
 }
-
