--- a/views/front-page.twig
+++ b/views/front-page.twig
@@ -62,7 +62,7 @@
                 {% for skill in skills %}
                     <div class="skill-link">
                         {# <a href="skills/#{{skill.slug}}">{{skill.title}}</a> #}
-                        <span class="skill-pill">{{skill.title}}</span>
+                        <span class="pill">{{skill.title}}</span>
                     </div>
                 {% endfor %}
             </div>
