add edit link to skill; reduce padding

--- a/assets/scss/partials/_main-content.scss
+++ b/assets/scss/partials/_main-content.scss
@@ -271,6 +271,11 @@ a.pill:hover {
     font-weight: 300;
     display: block;
   }
+
+  .post-holder {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .author-box {
