--- a/views/teases/tease-skill.twig
+++ b/views/teases/tease-skill.twig
@@ -19,6 +19,7 @@
       {% endif %}
       <div class="page-block-content post-holder">
         <p class="post-excerpt">{{post.get_preview(25)}}</p>
+        <a href="{{post.edit_link}}">Edit</a>
       </div>
     </div>
   </article>
