--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -1,10 +1,12 @@
 <header class="main-header" role="banner">
-    {% block header %}
-        <h2 class="site-name"><a href="{{site.url}}" rel="home">{{site.name}}</a></h2>
-        {% include "partials/menu.twig" with {'menu': main_nav.get_items, 'nav_class': 'main-nav', 'ul_class': 'main-menu'} %}
-        {% include "partials/menu.twig" with {'menu': social_nav.get_items, 'nav_class': 'social-nav', 'ul_class': 'main-menu'} %}
-        {% if fn('is_front_page') %}
-            {% include "partials/menu.twig" with {'menu': front_nav.get_items, 'nav_class': 'front-nav', 'ul_class': 'main-menu'} %}
-        {% endif %}
-    {% endblock %}
+  {% block header %}
+    <h2 class="site-name">
+      <a href="{{site.url}}" rel="home">{{site.name}}</a>
+    </h2>
+    {% include "partials/menu.twig" with {'menu': main_nav.get_items, 'nav_class': 'main-nav', 'ul_class': 'main-menu'} %}
+    {% include "partials/menu.twig" with {'menu': social_nav.get_items, 'nav_class': 'social-nav', 'ul_class': 'main-menu'} %}
+    {% if fn('is_front_page')and general.show_frontpage_nav %}
+      {% include "partials/menu.twig" with {'menu': front_nav.get_items, 'nav_class': 'front-nav', 'ul_class': 'main-menu'} %}
+    {% endif %}
+  {% endblock %}
 </header>
